[gd_scene load_steps=88 format=2]

[ext_resource path="res://scenes/car.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/road2.png" type="Texture" id=2]
[ext_resource path="res://scenes/coming_car.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/world.gd" type="Script" id=4]
[ext_resource path="res://sprites/block_vission.png" type="Texture" id=5]
[ext_resource path="res://sprites/button.png" type="Texture" id=6]
[ext_resource path="res://NotoSansJP-Medium.otf" type="DynamicFontData" id=7]
[ext_resource path="res://sprites/rain.png" type="Texture" id=8]
[ext_resource path="res://sprites/eye.png" type="Texture" id=9]
[ext_resource path="res://sprites/z.png" type="Texture" id=10]
[ext_resource path="res://sprites/closed eye.png" type="Texture" id=11]
[ext_resource path="res://sprites/semi closed eye.png" type="Texture" id=12]
[ext_resource path="res://sprites/wheel.png" type="Texture" id=13]
[ext_resource path="res://sprites/fiqus logo.png" type="Texture" id=14]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 90, 180 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 90, 0, 90, 180 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 180, 0, 90, 180 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 270, 0, 90, 180 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 90, 180 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 450, 0, 90, 180 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 540, 0, 90, 180 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 180, 90, 180 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 90, 180, 90, 180 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 180, 180, 90, 180 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 270, 180, 90, 180 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 360, 180, 90, 180 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 450, 180, 90, 180 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 540, 180, 90, 180 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 360, 90, 180 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 90, 360, 90, 180 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 180, 360, 90, 180 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 270, 360, 90, 180 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 360, 360, 90, 180 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 450, 360, 90, 180 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 540, 360, 90, 180 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 0, 540, 90, 180 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 90, 540, 90, 180 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 180, 540, 90, 180 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 270, 540, 90, 180 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 360, 540, 90, 180 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 450, 540, 90, 180 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 540, 540, 90, 180 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 0, 720, 90, 180 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 90, 720, 90, 180 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 180, 720, 90, 180 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 270, 720, 90, 180 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 360, 720, 90, 180 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 450, 720, 90, 180 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 540, 720, 90, 180 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 0, 900, 90, 180 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 90, 900, 90, 180 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 180, 900, 90, 180 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 90, 180 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 180, 0, 90, 180 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 90, 180 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 540, 0, 90, 180 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 90, 180, 90, 180 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 270, 180, 90, 180 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 450, 180, 90, 180 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 0, 360, 90, 180 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 180, 360, 90, 180 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 360, 360, 90, 180 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 540, 360, 90, 180 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 90, 540, 90, 180 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 270, 540, 90, 180 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 450, 540, 90, 180 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 0, 720, 90, 180 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 2 )
region = Rect2( 180, 720, 90, 180 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 2 )
region = Rect2( 360, 720, 90, 180 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 2 )
region = Rect2( 540, 720, 90, 180 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 2 )
region = Rect2( 90, 900, 90, 180 )

[sub_resource type="SpriteFrames" id=58]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 15.0
}, {
"frames": [ SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "less frames",
"speed": 60.0
} ]

[sub_resource type="Animation" id=59]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 22.5, 170 ), Vector2( 67.5, 170 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0, 0.0 ]
}

[sub_resource type="Animation" id=60]
resource_name = "fade in out"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=61]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1.41421, 1 ),
"update": 0,
"values": [ Vector2( 67.5, 170 ), Vector2( 22.5, 170 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("player:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -15.0, 0.0 ]
}

[sub_resource type="SpriteFrames" id=62]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "z",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": false,
"name": "closed",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "eyes open",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "wheel",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "semi closed",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=63]

[sub_resource type="RectangleShape2D" id=64]

[sub_resource type="Curve2D" id=65]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 90, 0 )
}

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 30, 60 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 8 )
region = Rect2( 30, 60, 30, 60 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 8 )
region = Rect2( 60, 120, 30, 60 )

[sub_resource type="SpriteFrames" id=69]
animations = [ {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=70]
size = 6
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=71]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="RectangleShape2D" id=72]
extents = Vector2( 11.5, 4.5 )

[sub_resource type="DynamicFont" id=73]
size = 8
font_data = ExtResource( 7 )

[node name="world" type="Node"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 100.0, 93.0, 132.0, 140.0 ],
"_edit_vertical_guides_": [ 44.9678, 3.0 ]
}
coming_car = ExtResource( 3 )

[node name="road" type="AnimatedSprite" parent="."]
position = Vector2( 43.9515, 89.7027 )
scale = Vector2( 1.02775, 1.00058 )
frames = SubResource( 58 )
animation = "less frames"
frame = 9
speed_scale = 0.7

[node name="player" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 67.5, 170 )
scale = Vector2( 2, 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/derecha = SubResource( 59 )
"anims/fade in out" = SubResource( 60 )
anims/izquierda = SubResource( 61 )

[node name="eyes" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 45, 172 )
frames = SubResource( 62 )
animation = "wheel"

[node name="buttons" type="Node2D" parent="."]

[node name="left" type="TouchScreenButton" parent="buttons"]
position = Vector2( 0, 100 )
scale = Vector2( 2.2, 4 )
shape = SubResource( 63 )
passby_press = true
action = "ui_left"

[node name="right" type="TouchScreenButton" parent="buttons"]
position = Vector2( 46, 100 )
scale = Vector2( 2.2, 4 )
shape = SubResource( 64 )
passby_press = true
action = "ui_right"

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 65 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

[node name="cars" type="Timer" parent="."]
wait_time = 2.0

[node name="effect" type="Timer" parent="."]
wait_time = 10.0

[node name="effect_stopper" type="Timer" parent="."]
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="AnimatedSprite" parent="CanvasLayer"]
visible = false
position = Vector2( 45, 90 )
scale = Vector2( 3, 3 )
frames = SubResource( 69 )
frame = 1
speed_scale = 2.0
playing = true

[node name="block_vission" type="Sprite" parent="CanvasLayer"]
visible = false
light_mask = 2
position = Vector2( 45, 90 )
scale = Vector2( 10, 10 )
z_index = 1
texture = ExtResource( 5 )

[node name="startButton" type="TouchScreenButton" parent="CanvasLayer"]
scale = Vector2( 2.8125, 2.8125 )
normal = ExtResource( 6 )

[node name="gameOverScreen" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -52.0
margin_right = 45.0
margin_bottom = 5.0
custom_fonts/font = SubResource( 70 )
text = "En estados unidos mueren alrededor de 10.000 personas por culpa de manejar bajo los efectos del alcohol al año.
No tomes si vas a manejar"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="CanvasLayer"]
light_mask = 4
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 71 )
align = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fiqus" type="Sprite" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0.45098 )
position = Vector2( 84.9, 174.839 )
scale = Vector2( 0.161111, 0.161111 )
texture = ExtResource( 14 )

[node name="LinkButton" type="TouchScreenButton" parent="CanvasLayer"]
visible = false
position = Vector2( 3, 140 )
z_index = 2
shape = SubResource( 72 )

[node name="Label" type="Label" parent="CanvasLayer/LinkButton"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -3.0
margin_right = 24.0
margin_bottom = 10.0
custom_fonts/font = SubResource( 73 )
text = "ayuda"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="start" from="." to="." method="_on_world_start"]
[connection signal="body_entered" from="player" to="." method="_on_player_body_entered"]
[connection signal="timeout" from="cars" to="." method="_on_cars_timeout"]
[connection signal="timeout" from="effect" to="." method="_on_effect_timeout"]
[connection signal="timeout" from="effect_stopper" to="." method="_on_effect_stopper_timeout"]
[connection signal="pressed" from="CanvasLayer/startButton" to="." method="_on_startButton_pressed"]
[connection signal="pressed" from="CanvasLayer/LinkButton" to="." method="_on_LinkButton_pressed"]
